# pixnet-2018

./: .gitignore  .gitmodules  .rsync-filter  Makefile  inpaint.yml.pixfood20.template  model.list  prepare_dataset.py  pyproject.toml  runtime.ipynb  sync.sh
config/: inpaint.壽司.yml  inpaint.拉麵.yml  inpaint.漢堡.yml  inpaint.牛肉麵.yml  inpaint.生魚片.yml  inpaint.薯條.yml  inpaint.蛋糕.yml  inpaint.鬆餅.yml
pixnet_2018/: test.py
