[tool.poetry]
name = "pixnet-2018"
version = "0.1.0"
description = ""
authors = ["顏孜羲 <joseph.yen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
carriage = "^0.4.13"
requests = "^2.19"
attrs = "^18.1"
jupyter = "^1.0"
opencv-python = "^3.4"
scikit-image = "^0.14.0"
tensorflow = "^1.10"
neuralgym = {git = "https://github.com/JiahuiYu/neuralgym"}
dramatiq = {version = "^1.3", extras = ["redis", "rabbitmq", "watch"]}

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
autoflake = "^1.2"
isort = "^4.3"
autopep8 = "^1.3"
